# telegram-challange

./: README.md  mypy.ini  pyproject.toml
app/: challange.db  config.py  db.py  main.py  model.py
nstx/: README.md  service.py
nstx/tests/: conftest.py  test_suite.py
tests/: test_process_request.py
